ks8/node-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    app: node
spec:
  selector:
    matchLabels:
      app: node
  replicas: 3
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
      - name: repo-renzo
        image: 152512582646.dkr.ecr.us-east-2.amazonaws.com/repo-renzo:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
