ks8/node-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-ingress
spec:
  backend:
    serviceName: node-service
    servicePort: 80
